--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
-name = "bit-rs"
+name = "frostbit"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 bitcore ={ version = "0.1.0", git = "https://github.com/dgtlrst/bitcore" }
 iced = "0.13.1"
-# iced.features = ["canvas", "tokio", "debug"]
-
 rand = "0.8"
 tracing-subscriber = "0.3"
