--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 bitcore ={ version = "0.1.0", git = "https://github.com/dgtlrst/bitcore" }
-iced = "0.13.1"
+iced = { version = "0.13.1", features = ["tokio"] }
 rand = "0.8"
 serde = "1.0.217"
 serde_json = "1.0.137"
